--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,24 @@
-# Compiled
-*.elc
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-# Packaging
-.cask
+node_modules
+dist
+dist-ssr
+*.local
 
-# Backup files
-*~
-
-# Undo-tree save-files
-*.~undo-tree
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
